--- a/style.css
+++ b/style.css
@@ -180,7 +180,11 @@ article section h1::before {
   article section h1::before {
     content: none;
   }
-  
+
+  .nome {
+    text-align: start;
+  }
+
   .subtitulo {
     align-self: center;
     text-align: center;
@@ -188,15 +192,15 @@ article section h1::before {
   }
 
   .intro {
-    text-align: center;
+    text-align: start;
     padding: 20px;
     grid-row: 1 / 2;
-    justify-items: center;
+    justify-items: start;
   }
 
   .desc {
     max-width: 52ch;
-    text-align: center;
+    text-align: start;
   }
 
   .imgprod {
@@ -204,8 +208,22 @@ article section h1::before {
     height: auto;
   }
 
-  .divlogo{
+  .divlogo {
     margin-top: 20px;
     gap: 10px;
+  }
+}
+
+@media (max-width: 800px) {
+  .subtitulo {
+    font-size: 3rem;
+    padding: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  .subtitulo {
+    font-size: 2.5rem;
+    padding: 20px;
   }
 }
